# Solana-todoDapp

./: Anchor.toml  Cargo.toml  next.config.js  package-lock.json  package.json  tsconfig.json
app/: next.config.js  package.json
app/components/: Header.jsx  WalletConnectProvider.js
app/constants/: idl.js  index.js  todo.json
app/hooks/: todo.js  useTodo.js
app/pages/: index.js
app/public/: index.html
programs/clever-todo/: Cargo.toml
programs/clever-todo/src/: error.rs  lib.rs
